<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Starke Verben</string>

    <string name="test">Test</string>
    <string name="progression">Progression</string>
    <string name="lesson">List</string>
    <string name="single_lesson">Lesson</string>

    <string name="finish">Finish</string>
    <string name="go_on">Continue</string>
    <string name="verify">Verify</string>
    <string name="save">Save</string>
    <string name="save_question">Save?</string>
    <string name="save_message">Save the mark</string>
    <string name="chart">Chart</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_now">Not now</string>
    <string name="no_progress_data">Take a test by pressing the orange button</string>

    <string name="at">at</string>

    <string name="infinitive">Infinitive</string>
    <string name="preterite">Preterite</string>
    <string name="participe">Participle</string>
    <string name="third_person">3rd Person</string>
    <string name="traduction">Translation</string>
    <string name="auxiliary">Auxiliary</string>

    <string name="pref">Settings</string>
    <string name="pref_about">About</string>
    <string name="pref_about_app">About this app</string>
    <string name="pref_language_translation_title">Translation language</string>
    <string name="pref_language_translation_summary">Choose the translation language</string>
    <string name="pref_language_translation_default">Automatic</string>
    <string name="pref_given_forms_title">Proposed forms in test</string>
    <string name="pref_given_forms_summary">Verb forms that may be proposed in tests</string>
    <string name="pref_form_order_title">Form order</string>

    <string name="version">Version</string>
    <string name="contributors">Contributors</string>
    <string name="connect">Get in touch with us</string>
    <string name="dependencies">Dependencies</string>
    <string name="developers">Developers</string>
    <string name="about_page_description" translatable="false">@string/app_name</string>

    <!-- Those following strings show when no translation is found,
         thus it is useless to translate them -->
    <string name="translate_alert" translatable="false">Translation needed</string>
    <string name="translate_message" translatable="false">This application is sadly not translated in your language. Would you like to help us and translate it?</string>
    <string name="contribute_trans" translatable="false">Contribute</string>
    <string name="contribution_url" translatable="false">https://hosted.weblate.org/projects/starke-verben</string>

    <string name="search_hint">Search</string>
    <string name="app_label" translatable="false">StarkeVerben</string>
</resources>
